--- a/style.css
+++ b/style.css
@@ -54,7 +54,17 @@ em.faded {
 
 header {
 	margin: 15px 0;
+	display: flex;
+	justify-content: space-between;
+}
+
+header div {
 	font-style: italic;
+	display: inline-block;
+}
+
+.buttons {
+	margin: auto 0;
 }
 
 a {
@@ -74,6 +84,8 @@ footer {
 	margin-top: auto;
 	width: 100%;
 	backdrop-filter: blur(8px);
+	display: flex;
+	justify-content: space-between;
 }
 
 .heart {
@@ -89,4 +101,11 @@ footer {
 .bottom-bar .time {
 	padding: 11px;
 	font-size: 14px;
+}
+
+#profile-img {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	margin-bottom: -15px;
 }
